# agentic_pseudo

./: .env.example  .gitignore
.claude/: CLAUDE.md  settings.json
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  test_gemini_integration.py  test_real_gemini.py
backend/alembic/: env.py
backend/alembic/versions/: 7dc09b2ca75f_add_agent_template_system_and_agent_.py
backend/src/: __init__.py  auth.py  database.py  exceptions.py
backend/src/api/: agent_templates.py  agents.py  conversations.py  data_unit_categories.py  data_units.py  main.py  templates.py
backend/src/models/: database_models.py  enums.py  schemas.py  task_models.py
backend/src/repository/: kvs_repository.py
backend/src/service/: agent_service.py  agent_template_service.py  ai_engine.py  ai_processor.py  ai_retry.py  conversation_service.py  data_unit_category_service.py  data_unit_service.py  gemini_constants.py  gemini_engine.py  llm_agents.py  planner_agent.py  sub_agents.py  template_service.py
backend/tests/: conftest.py  test_agents_api.py
backend/tests/acceptance/: __init__.py  test_task_workflow.py  test_use_case_scenarios.py
backend/tests/integration/: test_agent_execution.py  test_agent_hierarchy.py  test_agent_meta_info.py  test_agent_template_api.py  test_ai_integration.py  test_api_integration.py  test_data_unit_category_api.py  test_encoding_issues.py  test_gemini_enhanced.py  test_gemini_real_api.py  test_kvs_integration.py  test_llm_integration.py
backend/tests/unit/: test_ai_engine.py
docs/: backend-api-doc.md  backend-api-v2.md  backend-design-v3.md  frontend-definition.md  use_case_scenarios.md  use_case_scenarios2.md  what-definition.md
docs/user_stories/: story_1_idea_structuring.md  story_2_direct_execution.md  story_3_delegation.md  story_4_requirement_definition.md  whole_story.md
frontend/: index.html
frontend-v2/: package-lock.json  package.json
frontend-v2/app/: globals.css  page.tsx
frontend-v2/components/: agent-conversation.tsx  agent-info-panel.tsx  agent-list.tsx  agent-relationship-view.tsx  agent-settings.tsx  agent-status-list.tsx  agent-template-creator.tsx  agent-template-editor.tsx  chat-interface.tsx  context-status-card.tsx  data-unit-manager.tsx  data-unit-selector.tsx  sidebar.tsx  template-gallery.tsx
frontend-v2/hooks/: useAgentManager.ts  useDataUnits.ts
frontend-v2/lib/: data-units-config.ts
frontend-v2/types/: agent.ts
src/: __init__.py
src/api/: frontend.py  main.py
(+5 files in other folders)
